welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: identifier expected but 'true' found.
var vuBiscuit: Boolean == true
                          ^